<resources>
    <string name="app_name">鑫凯宇</string>

    <!-- Dialog -->
    <string name="ok">确定</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>

    <string name="phone">手机号</string>
    <string name="user_name">请输入用户名/手机号/邮箱</string>
    <string name="password">密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登录</string>

    <string name="home">首页</string>
    <string name="classify">分类</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>
    <string name="per_jin">500g</string>
    <string name="add_cart">加入购物车</string>
    <string name="search">搜索</string>
    <string name="search_commodity">搜索商品</string>

    <string name="delete">删除</string>
    <string name="select_all">全选</string>
    <string name="submit_order">提交订单</string>
    <string name="confirm_order">确认订单</string>
    <string name="send_time">送达时间</string>
    <string name="please_select_send_time">请选择送达时间</string>
    <string name="select_send_time">选择送达时间</string>
    <string name="commodity_amount">商品件数</string>
    <string name="expect_money">预计金额</string>
    <string name="expect_money_">预计金额 ￥%1$s</string>
    <string name="confirm_order_desc">预计金额为预订时估算的金额，请以实际到货的金额为准</string>
    <string name="expect">预定</string>

    <string name="commodity_list">商品清单</string>
    <string name="commodity">商品</string>

    <string name="call_we">联系我们</string>
    <string name="exit_login">退出登录</string>
    <string name="my_order">我的订单</string>
    <string name="all_order">全部订单</string>
    <string name="all">全部</string>
    <string name="wait_send">待送达</string>
    <string name="finished">已完成</string>
    <string name="order_detail">订单详情</string>

    <string name="no_send_order">待送订单</string>
    <string name="history_order">历史订单</string>
    <string name="see_address">查看地址</string>

    <string name="confirm_send">确认送达</string>
    <string name="confirm_info">确认信息</string>
    <string name="actual_price">实收金额:</string>
    <string name="please_confirm_actual_fund">请确认您的实收金额</string>
    <string name="should_fund">应收金额:</string>
    <string name="actual_fund">实收金额:</string>
    <string name="sum">总计</string>
    <string name="contract_us">联系我们</string>

    <string name="login_success">登录成功</string>
    <string name="load_more">加载更多</string>
    <string name="yuan_symbol_">￥%1$s</string>
    <string name="unit_">1%1$s</string>
    <string name="total_">共%1$s件</string>
    <string name="total_commodity_">共%1$s件商品</string>
    <string name="_total">%1$s 件</string>
    <string name="unit_price_">单价: %1$s</string>
    <string name="amount_">数量: %1$s</string>
    <string name="confirm_delect_selected_commodity">确定删除勾选商品吗?</string>
    <string name="please_select_commodity_then_submit">请选择商品后再结算</string>
    <string name="submit_success_wait_send">订单提交成功</string>
    <string name="confirm_logout">确认退出登录吗?</string>
    <string name="phone_">电话: %1$s</string>
    <string name="login_account_">登录账号: %1$s</string>
    <string name="address_">地址: %1$s</string>
    <string name="actual_amount_">实送 %1$s%2$s</string>
    <string name="order_price">订单金额:</string>
    <string name="order_id_">订单号:%1$s</string>
    <string-array name="send_times">
        <item>06:00-07:00</item>
        <item>07:00-08:00</item>
        <item>08:00-09:00</item>
        <item>09:00-10:00</item>
        <item>10:00-11:00</item>
        <item>11:00-12:00</item>
        <item>12:00-13:00</item>
        <item>13:00-14:00</item>
        <item>14:00-15:00</item>
        <item>15:00-16:00</item>
        <item>16:00-17:00</item>
        <item>17:00-18:00</item>
        <item>18:00-19:00</item>
        <item>19:00-20:00</item>
        <item>20:00-21:00</item>
    </string-array>

</resources>
