<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <com.fine.vegetables.view.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backFeature="true"
        app:titleText="@string/confirm_order" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/common_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/send_time"
                android:textColor="@color/luckyText"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/selectTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_right"
                android:drawablePadding="10dp"
                android:text="@string/please_select_send_time"
                android:textColor="@color/green"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <GridView
                android:id="@+id/gridView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:columnWidth="50dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:paddingLeft="20dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin"
            android:background="@color/background"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/commodity_amount"
                    android:textColor="@color/luckyText"
                    android:textSize="14sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/luckyText"
                    android:textSize="14sp"
                    tool:text="@string/commodity_amount" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/expect_money"
                    android:textColor="@color/luckyText"
                    android:textSize="14sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/sumPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/luckyText"
                    android:textSize="14sp"
                    tool:text="@string/commodity_amount" />

            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/confirm_order_desc"
            android:textColor="@color/unluckyText"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_green_radius_two"
            android:gravity="center"
            android:paddingTop="13dp"
            android:paddingBottom="10dp"
            android:text="@string/ok"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>