<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/ic_mine_bg"
        android:padding="@dimen/common_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/contract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/ic_call_we"
                android:text="@string/call_we"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/exit_login"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/avatar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/common_margin"
                android:scaleType="center"
                android:src="@drawable/ic_avatar" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:textColor="@color/white"
                android:textSize="17sp"
                tool:text="丰县消协大队" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/userAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#D3F1B6"
                android:textSize="14sp"
                tool:text="1743838495" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_margin"
        android:layout_weight="2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/my_order"
                android:textColor="@color/luckyText"
                android:textSize="17sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/myOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableRight="@drawable/ic_right"
                android:text="@string/all_order"
                android:textColor="@color/unluckyText"
                android:textSize="12sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/waitSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin"
            android:background="@drawable/bg_white_radius_four"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="72dp"
                android:layout_marginBottom="@dimen/common_margin"
                android:src="@drawable/ic_order_no_send" />

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wait_send"
                    android:textColor="@color/luckyText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/index"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_red_round"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/finished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin"
            android:background="@drawable/bg_white_radius_four"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="72dp"
                android:layout_marginBottom="@dimen/common_margin"
                android:src="@drawable/ic_order_finish" />


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/finished"
                android:textColor="@color/luckyText"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>