<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_radius_four">

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/blackPrimary"
        android:textSize="17sp"
        tool:text="确认送达-丰县消协大队" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="@dimen/common_margin"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/confirmFund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/please_confirm_actual_fund"
        android:textColor="@color/luckyText"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/shouldLayout"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmFund"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName"
            android:layout_centerHorizontal="true"
            android:text="@string/should_fund"
            android:textColor="@color/luckyText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/shouldFund"
            android:layout_width="0dp"
            android:paddingRight="10dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/redPrimary"
            android:textSize="16sp"
            tool:text="￥858.90" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/actualLayout"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shouldLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginRight="9dp"
            android:text="@string/actual_fund"
            android:textColor="@color/luckyText"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/actualFund"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_below="@+id/userName"
            android:layout_centerHorizontal="true"
            android:paddingRight="10dp"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_rmb"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:drawablePadding="10dp"
            android:background="@color/background"
            android:ellipsize="end"
            android:gravity="right|center"
            android:inputType="numberDecimal"
            android:textColor="@color/blackPrimary"
            android:textSize="16sp"
            tool:text="￥858.90" />

    </LinearLayout>

    <TextView
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actualLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_green_radius_thirteen"
        android:paddingLeft="30dp"
        android:paddingTop="9dp"
        android:paddingRight="30dp"
        android:paddingBottom="9dp"
        android:text="@string/confirm_send"
        android:textColor="@color/white"
        android:textSize="15sp" />


</RelativeLayout>