<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.fine.vegetables.view.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backFeature="false"
        app:rightText="@string/delete"
        app:rightTextColor="@color/green"
        app:rightTextSize="14sp"
        app:rightVisible="true"
        app:titleText="@string/cart" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/totalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/selectAll"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/common_margin"
                android:background="@drawable/bg_cart_index" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="55dp"
                android:text="@string/select_all"
                android:textColor="@color/luckyText"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:text="@string/select_all"
                android:textColor="@color/luckyText"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/redPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tool:text="$858.90" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/totalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/unluckyText"
                    android:textSize="11sp"
                    tool:text="共35件" />


            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/common_margin"
                android:background="@drawable/btn_red"
                android:paddingLeft="16dp"
                android:paddingTop="9dp"
                android:paddingRight="16dp"
                android:paddingBottom="9dp"
                android:text="@string/submit_order"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </RelativeLayout>


</android.support.v7.widget.LinearLayoutCompat>