<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <com.fine.vegetables.view.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:backFeature="true"
        app:titleText="@string/order_detail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/common_margin">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/commodity"
            android:textColor="@color/luckyText"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/luckyText"
            android:textSize="14sp"
            tool:text="共4件" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/finishedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="16dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/expectMoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/unluckyText"
            android:textSize="12sp"
            tool:text="预计金额: ￥858.90" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="right"
                android:text="实际金额"
                android:textColor="@color/blackPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/actualMoney"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="@color/redPrimary"
                android:textSize="18sp"
                tool:text="￥758.90" />

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/confirmLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="132dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="6dp"
                android:text="@string/sum"
                android:textColor="@color/blackPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sumPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/redPrimary"
                android:textSize="18sp"
                tool:text="￥858.90" />

        </LinearLayout>


        <TextView
            android:id="@+id/confirm"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/btn_green_radius_two"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>